# SPDX-License-Identifier: (GPL-2.0-only OR BSD-3-Clause)
# SPDX-FileCopyrightText: 2024 Matthias Weißer <m.weisser.m@gmail.com>

option('libconfig', type: 'boolean', value: false, description: 'enable support for libconfig')
option('libsocketcan', type: 'boolean', value: false, description: 'enable support for libsocketcan')
option('rc_script', type: 'boolean', value: false, description: 'enable creation of rc.d start script')
option('init_script', type: 'boolean', value: false, description: 'enable creation of init.d start script')
